exports[`<QueryField /> component should render a query field component with no value 1`] = `
<div
  data-css-7xr9oy="">
  <input
    data-css-1np20br=""
    onChange={undefined}
    value={undefined} />
</div>
`;

exports[`<QueryField /> component should render a query field component with some value 1`] = `
<div
  data-css-7xr9oy="">
  <input
    data-css-1np20br=""
    onChange={undefined}
    value="TEST" />
</div>
`;
